[tool.poetry]
name = "parser-makaron"
version = "0.0.1"
description = "Social network comment parser"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
django = "^5.1.0"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
google-api-python-client = "^2.140.0"
pytz = "^2024.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
